# books_api_rust

./: .env  Cargo.toml
migrations/2021-08-14-122348_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/models/: user.rs
src/routes/: mod.rs  user_route.rs
