[package]
name = "books_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "*"
serde = "*"
serde_json = "*"
diesel = { version = "*", features = ["postgres", "r2d2", "uuid", "chrono"] }
lazy_static = "*"
r2d2 = "*"
diesel_migrations = "*"
uuid = { version = "*", features = ["serde", "v4"] }