[package]
name = "books_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "*"
serde = "*"
serde_json = "*"
dotenv = "*"
sqlx = { version = "0.3", features = [ 'runtime-async-std',"macros", "postgres", "chrono", "json" ] }
futures = "*"
listenfd = "*"
anyhow = "*"